src/components/VendorCard.css
/* .first-color { 
	background: #cbf078; 
}
	
.second-color { 
	background: #f8f398; 
}

.third-color { 
	background: #f1b963; 
}

.fourth-color { 
	background: #e46161; 
} */

.flip-card {
  /* flex: 1 0 auto;
  margin: 5px;
  width: 12rem;
  height: 12rem;
  margin-top: 10rem; */


  background-color: transparent;
  width: 22rem;
  height: 13rem;
  margin: 1rem;
  perspective: 1000px; /* Remove this if you don't want the 3D effect */
}

.flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}

.flip-card-front {
  background-color: #cbf078;
  color: black;
}

.flip-card-back {
  background-color: #f8f398;
  color: f8f398;
  transform: rotateY(180deg);
}

.card-link {
    text-decoration: none;
}

